Added update for managers