@@ -4,6 +4,7 @@ import com.tuvarna.hotel.api.models.display.hotel.Hotel;
 import com.tuvarna.hotel.api.models.display.service.Service;
 import com.tuvarna.hotel.domain.singleton.Singleton;
 import com.tuvarna.hotel.persistence.entities.HotelEntity;
+import com.tuvarna.hotel.persistence.entities.UserEntity;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -14,17 +15,23 @@ public class ConvertServicesToList implements BaseConverter<List<HotelEntity>,Li
     @Override
     public List<Hotel> convert(List<HotelEntity> hotelEntities) {
         return hotelEntities.stream()
-                .map(hotelEntity -> new Hotel(
-                        hotelEntity.getId(),
-                        hotelEntity.getName(),
-                        hotelEntity.getLocation(),
-                        hotelEntity.getRating(),
-                        hotelEntity.getServiceList().stream().map(serviceEntity -> Service.builder()
-                                .id(serviceEntity.getId())
-                                .price(serviceEntity.getPrice())
-                                .name(serviceEntity.getServiceName())
-                                .build()).toList()
-                ))
+                .map(hotelEntity -> Hotel.builder()
+                        .id(hotelEntity.getId())
+                        .name(hotelEntity.getName())
+                        .location(hotelEntity.getLocation())
+                        .stars(hotelEntity.getRating())
+                        .serviceList(hotelEntity.getServiceList().stream()
+                                .map(serviceEntity -> Service.builder()
+                                        .id(serviceEntity.getId())
+                                        .price(serviceEntity.getPrice())
+                                        .name(serviceEntity.getServiceName())
+                                        .build())
+                                .collect(Collectors.toList()))
+                        .userList(hotelEntity.getUserList().stream()
+                                .map(UserEntity::getId)
+                                .collect(Collectors.toList()))
+                        .build()
+                )
                 .collect(Collectors.toList());
     }
 }
